# treelens

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: checksums.rs  compare.rs  dupes.rs  lib.rs  stego.rs
crates/fileops/: Cargo.toml
crates/fileops/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/examples/: diag.rs
crates/scanner/src/: lib.rs
crates/scanner/src/mft/: boot.rs  mod.rs  record.rs  runs.rs
crates/scanner/tests/: mft_integration.rs
crates/tree/: Cargo.toml
crates/tree/benches/: build.rs
crates/tree/src/: lib.rs
scripts/: build-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
ui/: index.html  tsconfig.json
ui/src/: colors.ts  drives.ts  format.ts  ipc.ts  main.ts  styles.css  treemap.ts
