[workspace]
resolver = "2"
members = [
    "crates/scanner",
    "crates/tree",
    "crates/fileops",
    "crates/analysis",
    "src-tauri",
]

[workspace.package]
version = "0.6.2"
edition = "2021"
license = "MIT"
authors = ["Skylar Pearce"]
repository = "https://github.com/skyflyt/treelens"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
