[package]
name = "treelens"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Free, open-source disk-space visualizer for Windows."

[lib]
name = "treelens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "treelens"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

scanner = { path = "../crates/scanner" }
tree = { path = "../crates/tree" }
fileops = { path = "../crates/fileops" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
