[package]
name = "analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.11"
crc32fast = "1.4"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }

[dev-dependencies]
tempfile = "3"
