[package]
name = "scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
rayon.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tempfile = "3"
