[package]
name = "tree"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
parking_lot.workspace = true
scanner = { path = "../scanner" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "build"
harness = false
